feat: restaurant 생성 제한 기능 추가
- 3개까지만 생성 가능
- 조회시 CLOSED 상태인 가게는 조회할수 없음
- 카테고리별 조회 기능 추가(위와 같은 조건)

+ 단건조회에 메뉴와 함께 조회하는 기능 추가해야 함
(메뉴 조회 기능 필요)