@@ -5,6 +5,7 @@ import com.gurakbu.delivery.domain.restaurant.dto.response.RestaurantDetailRespo
 import com.gurakbu.delivery.domain.restaurant.dto.request.RestaurantCreateRequestDto;
 import com.gurakbu.delivery.domain.restaurant.dto.response.RestaurantListResponseDto;
 import com.gurakbu.delivery.domain.restaurant.entity.Restaurant;
+import com.gurakbu.delivery.domain.restaurant.enums.RestaurantStatus;
 import com.gurakbu.delivery.domain.restaurant.repository.RestaurantRepository;
 import com.gurakbu.delivery.domain.user.entity.User;
 import lombok.RequiredArgsConstructor;
@@ -14,6 +15,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +26,11 @@ public class RestaurantService {
     @Transactional
     public RestaurantDetailResponseDto createRestaurant(User user, RestaurantCreateRequestDto requestDto) {
         if(!user.isOwner(user.getId())){
-            throw new SecurityException("권한이 없습니다.");
+            throw new SecurityException("권한없음");
+        }
+        long openRestaurants = restaurantRepository.countByUserIdAndStatus(user.getId(), RestaurantStatus.OPEN);
+        if (openRestaurants >= 3) {
+            throw new IllegalStateException("가게는 3개까지 생성 가능");
         }
         Restaurant restaurant = new Restaurant(
                 user,
@@ -50,15 +56,22 @@ public class RestaurantService {
 
     @Transactional(readOnly = true)
     public List<RestaurantListResponseDto> findAllRestaurants() {
-        List<RestaurantListResponseDto> dtos = restaurantRepository.findAll()
-                .stream().map(RestaurantListResponseDto::fromEntity).toList();
-        return dtos;
+        List<Restaurant> restaurants = restaurantRepository.getRestaurantsByCategory(RestaurantStatus.CLOSED);
+        return restaurants.stream().map(RestaurantListResponseDto::fromEntity).toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<RestaurantListResponseDto> getRestaurantsByCategory(String category) {
+        List<Restaurant> restaurants = restaurantRepository.findAllByCategoryAndStatusNotOrderByUpdatedAtDesc(category, RestaurantStatus.CLOSED);
+        return restaurants.stream()
+                .map(RestaurantListResponseDto::fromEntity)
+                .collect(Collectors.toList());
     }
 
     @Transactional
     public RestaurantDetailResponseDto updateRestaurant(User user, Long id, RestaurantUpdateRequestDto requestDto) {
         if(!user.isOwner(user.getId())){
-            throw new SecurityException("권한이 없습니다.");
+            throw new SecurityException("권한없음");
         }
         Restaurant restaurant = restaurantRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "존재하지 않는 가게"));
@@ -69,7 +82,7 @@ public class RestaurantService {
     @Transactional
     public void closeRestaurant(User user, Long id) {
         if(!user.isOwner(user.getId())){
-            throw new SecurityException("권한이 없습니다.");
+            throw new SecurityException("권한없음");
         }
         Restaurant restaurant = restaurantRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "존재하지 않는 가게"));
